--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build"
+    "deploy": "vite build && npx gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^12.33.0",
